--- a/boards/templates/boards/topic_posts.html
+++ b/boards/templates/boards/topic_posts.html
@@ -42,7 +42,9 @@
                         {{ post.message }}
                         {% if post.created_by == user %}
                             <div class="mt-3">
-                                <a href="#" class="btn btn-primary btn-sm" role="button">Edit</a>
+                                <a href="{% url 'post-edit' topic.board.pk topic.pk post.pk %}"
+                                   class="btn btn-primary btn-sm"
+                                   role="button">Edit</a>
                             </div>
                         {% endif %}
                     </div>
