--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
         {% for board in boards %}
             <tr>
                 <td>
-                    <a href="{% url 'board-detail' board.pk %}">{{ board.name }}</a>
+                    <a href="{% url 'topic-list' board.pk %}">{{ board.name }}</a>
                     <small class="text-muted d-block">{{ board.description }}</small>
                 </td>
                 <td class="align-middle">{{ board.get_post_count }}</td>
