--- a/boards/templates/boards/topic_new.html
+++ b/boards/templates/boards/topic_new.html
@@ -8,7 +8,7 @@
 
 {% block breadcrumb %}
     <li class="breadcrumb-item"><a href="{% url 'home' %}">Boards</a></li>
-    <li class="breadcrumb-item"><a href="{% url 'board-detail' board.pk %}">{{ board.name }}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'topic-list' board.pk %}">{{ board.name }}</a></li>
     <li class="breadcrumb-item active">New topic</li>
 {% endblock %}
 
