--- a/boards/templates/boards/post_list.html
+++ b/boards/templates/boards/post_list.html
@@ -16,8 +16,8 @@
     <div class="mb-4">
         <a href="{% url 'topic-reply' topic.board.pk topic.pk %}" class="btn btn-primary">Reply</a>
     </div>
-    {% for post in topic.posts.all %}
-        <div class="card mb-2 {% if forloop.first %}border-dark{% endif %}">
+    {% for post in posts %}
+        <div class="card mb-2 {% if forloop.last %}mb-4{% else %}mb-2{% endif %} {% if forloop.first %}border-dark{% endif %}">
             {% if forloop.first %}
                 <div class="card-header bg-dark text-white py-2 px-3">
                     {{ topic.subject }}
@@ -52,4 +52,6 @@
             </div>
         </div>
     {% endfor %}
+
+    {% include 'boards/snippets/pagination.html' %}
 {% endblock %}
