--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,6 +1,7 @@
 {% url 'signup' as signup_url %}
 {% url 'login' as login_url %}
 {% url 'logout' as logout_url %}
+{% url 'account-detail' as account_url %}
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -19,8 +20,7 @@
                             {{ user.username }}
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                            <a class="dropdown-item" href="#">My Account</a>
-                            <a class="dropdown-item" href="#">Some link</a>
+                            <a class="dropdown-item" href="{{ account_url }}">My Account</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{{ logout_url }}">Logout</a>
                         </div>
