--- a/boards/templates/boards/topic_reply.html
+++ b/boards/templates/boards/topic_reply.html
@@ -1,9 +1,14 @@
 {% extends 'base.html' %}
 
 {% load crispy_forms_tags %}
+{% load static %}
 
 {% block title %}
     Post a reply
+{% endblock %}
+
+{% block stylesheet %}
+    <link rel="stylesheet" href="{% static 'css/simplemde.min.css' %}">
 {% endblock %}
 
 {% block breadcrumb %}
@@ -31,9 +36,15 @@
                         <small class="text-muted">{{ post.created_at }}</small>
                     </div>
                 </div>
-                {{ post.message }}
+                {{ post.get_message_as_markdown }}
             </div>
         </div>
     {% endfor %}
+{% endblock %}
 
+{% block javascript %}
+    <script src="{% static 'js/simplemde.min.js' %}"></script>
+    <script>
+        var simplemde = new SimpleMDE();
+    </script>
 {% endblock %}
