--- a/boards/templates/boards/topic_list.html
+++ b/boards/templates/boards/topic_list.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load humanize %}
+
 {% block title %}
     {{ board.name }} - {{ block.super }}
 {% endblock %}
@@ -34,8 +36,8 @@
                     <td>{{ topic.starter.username }}</td>
                     <td class="align-middle">
                         {% if not topic.replies < 0 %}{{ topic.replies }}{% else %}0{% endif %}</td>
-                    <td class="align-middle">{{ topic.views }}</td>
-                    <td>{{ topic.last_update }}</td>
+                    <td class="align-middle">{{ topic.views|intcomma }}</td>
+                    <td>{{ topic.last_update|naturaltime }}</td>
                 </tr>
             {% endfor %}
             </tbody>
