--- a/boards/templates/boards/topic_reply.html
+++ b/boards/templates/boards/topic_reply.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% load crispy_forms_tags %}
+{% load humanize %}
 {% load static %}
 
 {% block title %}
@@ -33,7 +34,7 @@
                         <strong class="text-muted">{{ post.created_by.username }}</strong>
                     </div>
                     <div class="col-6 text-right">
-                        <small class="text-muted">{{ post.created_at }}</small>
+                        <small class="text-muted">{{ post.created_at|naturaltime }}</small>
                     </div>
                 </div>
                 {{ post.get_message_as_markdown }}
