--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load humanize %}
+
 {% block breadcrumb %}
     <li class="breadcrumb-item">Boards</li>
 {% endblock %}
@@ -21,14 +23,14 @@
                     <a href="{% url 'topic-list' board.pk %}">{{ board.name }}</a>
                     <small class="text-muted d-block">{{ board.description }}</small>
                 </td>
-                <td class="align-middle">{{ board.get_post_count }}</td>
-                <td class="align-middle">{{ board.topics.count }}</td>
+                <td class="align-middle">{{ board.get_post_count|intcomma }}</td>
+                <td class="align-middle">{{ board.topics.count|intcomma }}</td>
                 <td class="align-middle">
                     {% with post=board.get_last_post %}
                         {% if post %}
                             <small>
                                 <a href="{% url 'topic-posts' board.pk post.topic.pk %}">
-                                    By {{ post.created_by.username }} at {{ post.created_at }}
+                                    By {{ post.created_by.username }} | {{ post.created_at|naturaltime }}
                                 </a>
                             </small>
                         {% else %}
