--- a/boards/templates/boards/snippets/pagination.html
+++ b/boards/templates/boards/snippets/pagination.html
@@ -1,25 +1,34 @@
 {% if is_paginated %}
     <nav aria-label="Topics pagination" class="mb-4">
         <ul class="pagination justify-content-center">
-            {% if page_obj.has_previous %}
+            {% if page_obj.number > 1 %}
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                    <a class="page-link" href="?page=1">First</a>
                 </li>
             {% else %}
                 <li class="page-item disabled">
-                    <span class="page-link">Previous</span>
+                    <span class="page-link">First</span>
+                </li>
+            {% endif %}
+            {% if page_obj.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">&laquo;</a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <span class="page-link">&laquo;</span>
                 </li>
             {% endif %}
 
             {% for page_num in paginator.page_range %}
                 {% if page_obj.number == page_num %}
                     <li class="page-item active">
-                            <span class="page-link">
-                                {{ page_num }}
-                                <span class="sr-only">(current)</span>
-                            </span>
+                        <span class="page-link">
+                          {{ page_num }}
+                          <span class="sr-only">(current)</span>
+                        </span>
                     </li>
-                {% else %}
+                {% elif page_num > page_obj.number|add:'-3' and page_num < page_obj.number|add:'3' %}
                     <li class="page-item">
                         <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
                     </li>
@@ -28,11 +37,20 @@
 
             {% if page_obj.has_next %}
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">&raquo;</a>
                 </li>
             {% else %}
                 <li class="page-item disabled">
-                    <span class="page-link">Next</span>
+                    <span class="page-link">&raquo;</span>
+                </li>
+            {% endif %}
+            {% if page_obj.number != paginator.num_pages %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ paginator.num_pages }}">Last</a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <span class="page-link">Last</span>
                 </li>
             {% endif %}
         </ul>
