Added Gravatar feature

--- a/boards/templates/boards/post_list.html
+++ b/boards/templates/boards/post_list.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+{% load gravatar %}
 {% load humanize %}
 {% load static %}
 
@@ -38,8 +39,8 @@
             <div class="card-body p-3">
                 <div class="row">
                     <div class="col-2">
-                        <img src="{% static 'img/default_profile.svg' %}" alt="{{ post.created_by.username }}"
-                             class="w-100">
+                        <img src="{{ post.created_by|gravatar }}" alt="{{ post.created_by.username }}"
+                             class="w-50 rounded"><br>
                         <small>Posts: {{ post.created_by.posts.count|intcomma }}</small>
                     </div>
                     <div class="col-10">
@@ -53,14 +54,14 @@
                         </div>
                         {{ post.get_message_as_markdown }}
                         {% if post.created_by == user %}
-                            <div class="mt-3">
+                            <div class="d-flex align-items-end">
                                 <a href="{% url 'post-edit' topic.board.pk topic.pk post.pk %}"
                                    class="btn btn-primary btn-sm"
                                    role="button">Edit</a>
                             </div>
                         {% endif %}
                         {% if post.updated_by %}
-                            <div class="align-items-end">
+                            <div class="d-flex align-items-end">
                                 <small class="text-muted">Edited by {{ post.updated_by }} |
                                     {{ post.updated_at|naturaltime }}</small>
                             </div>
