--- a/boards/templates/boards/post_list.html
+++ b/boards/templates/boards/post_list.html
@@ -29,48 +29,54 @@
         </div>
     </div>
     {% for post in posts %}
-        <div id="{{ post.pk }}" class="card {% if forloop.last %}mb-4{% else %}mb-2{% endif %}
+        {% if page_obj.number == 1 %}
+            <div id="{{ post.pk }}" class="card {% if forloop.last %}mb-4{% else %}mb-2{% endif %}
 {% if forloop.first %}border-dark{% endif %}">
-            {% if forloop.first %}
-                <div class="card-header bg-dark text-white py-2 px-3">
-                    {{ topic.subject }}
-                </div>
-            {% endif %}
-            <div class="card-body p-3">
-                <div class="row">
-                    <div class="col-2">
-                        <img src="{{ post.created_by|gravatar }}" alt="{{ post.created_by.username }}"
-                             class="w-50 rounded"><br>
-                        <small>Posts: {{ post.created_by.posts.count|intcomma }}</small>
+        {% else %}
+            <div id="{{ post.pk }}" class="card {% if forloop.last %}mb-4{% else %}mb-2{% endif %}">
+        {% endif %}
+    {% if page_obj.number == 1 %}
+        {% if forloop.first %}
+            <div class="card-header bg-dark text-white py-2 px-3">
+                {{ topic.subject }}
+            </div>
+        {% endif %}
+    {% endif %}
+    <div class="card-body p-3">
+        <div class="row">
+            <div class="col-2">
+                <img src="{{ post.created_by|gravatar }}" alt="{{ post.created_by.username }}"
+                     class="w-50 rounded"><br>
+                <small>Posts: {{ post.created_by.posts.count|intcomma }}</small>
+            </div>
+            <div class="col-10">
+                <div class="row mb-3">
+                    <div class="col-6">
+                        <strong class="text-muted">{{ post.created_by.username }}</strong>
                     </div>
-                    <div class="col-10">
-                        <div class="row mb-3">
-                            <div class="col-6">
-                                <strong class="text-muted">{{ post.created_by.username }}</strong>
-                            </div>
-                            <div class="col-6 text-right">
-                                <small class="text-muted">{{ post.created_at|naturaltime }}</small>
-                            </div>
-                        </div>
-                        {{ post.get_message_as_markdown }}
-                        {% if post.created_by == user %}
-                            <div class="d-flex align-items-end">
-                                <a href="{% url 'post-edit' topic.board.pk topic.pk post.pk %}"
-                                   class="btn btn-primary btn-sm"
-                                   role="button">Edit</a>
-                            </div>
-                        {% endif %}
-                        {% if post.updated_by %}
-                            <div class="d-flex align-items-end">
-                                <small class="text-muted">Edited by {{ post.updated_by }} |
-                                    {{ post.updated_at|naturaltime }}</small>
-                            </div>
-                        {% endif %}
+                    <div class="col-6 text-right">
+                        <small class="text-muted">{{ post.created_at|naturaltime }}</small>
                     </div>
                 </div>
+                {{ post.get_message_as_markdown }}
+                {% if post.created_by == request.user or request.user.is_staff %}
+                    <div class="d-flex align-items-end">
+                        <a href="{% url 'post-edit' topic.board.pk topic.pk post.pk %}"
+                           class="btn btn-primary btn-sm"
+                           role="button">Edit</a>
+                    </div>
+                {% endif %}
+                {% if post.updated_by %}
+                    <div class="d-flex align-items-end">
+                        <small class="text-muted">Edited by {{ post.updated_by }} |
+                            {{ post.updated_at|naturaltime }}</small>
+                    </div>
+                {% endif %}
             </div>
         </div>
+    </div>
+    </div>
     {% endfor %}
 
-    {% include 'boards/snippets/pagination.html' %}
+{% include 'boards/snippets/pagination.html' %}
 {% endblock %}
