--- a/boards/templates/boards/topic_list.html
+++ b/boards/templates/boards/topic_list.html
@@ -14,7 +14,7 @@
 {% block content %}
     {% if request.user.is_authenticated %}
         <div class="mb-4">
-            <a href="{% url 'topic-new' board.pk %}" class="btn btn-primary">New topic</a>
+            <a href="{% url 'boards:topic-new' board.pk %}" class="btn btn-primary">New topic</a>
         </div>
     {% endif %}
 
@@ -31,7 +31,7 @@
             </thead>
             <tbody>
             {% for topic in topics %}
-                {% url 'topic-posts' board.pk topic.pk as topic_url %}
+                {% url 'boards:topic-posts' board.pk topic.pk as topic_url %}
                 <tr>
                     <td>
                         <p class="mb-0">
